--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -22,7 +22,7 @@
 
 	.main-title {
 		font-family: Arial;
-		font-size: 5vh;
+		font-size: 4.5vh;
 		color: #FFFFFF;
 		text-align: center;
 		font-weight: bold;
@@ -54,6 +54,7 @@
 
 		box-shadow: 0 4px 8px 0 rgba(0,0,0,0.3);
 		max-width: 100vw;
+		max-height: 75vh;
 		margin: auto;
 		text-align: center;
 		border-radius: 25px;
