--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -70,6 +70,11 @@
 		margin: 5px;
 	}
 
+	.url-bar {
+		margin: 5px;
+		width: 40vw;
+	}
+
 	#run-button {
 		border: 1px solid #000;
 		border-radius: 5px;
